<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/register_title_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:src="@drawable/ic_action_back"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/register_user"
            android:textColor="@color/color_user_collection"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_username"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/register_username"
            android:padding="15dp"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/register_password"
            android:padding="15dp"
            android:inputType="textPassword"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/register_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_password"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/register_password_again"
            android:padding="15dp"
            android:inputType="textPassword"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_email"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:hint="@string/register_email"
            android:padding="15dp"
            tools:ignore="RtlHardcoded,TextFields"/>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/register_title_bg"
        android:text="@string/register_btn"
        android:textColor="@color/color_user_collection"
        android:textSize="18sp"/>

</LinearLayout>
