<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/register_title_bg"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_login_back"
            android:padding="14dp"
            android:src="@drawable/ic_action_back"
            android:contentDescription=""
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login_title_text"
            android:gravity="center_vertical"
            android:textColor="@color/color_user_collection"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_username"
            android:drawablePadding="5dp"
            android:hint="@string/login_edit_username"
            android:padding="15dp"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_password"
            android:drawablePadding="5dp"
            android:hint="@string/login_edit_password"
            android:inputType="textPassword"
            android:padding="15dp"
            tools:ignore="RtlHardcoded"/>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/select_login_back"
            android:text="@string/login_btn_login"
            android:textColor="@color/color_user_collection"
            android:textSize="18sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/login_register_btn"
                android:padding="15dp"
                android:text="@string/login_btn_register"
                android:textColor="@color/register_title_bg"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"/>

            <Button
                android:id="@+id/login_btn_find_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@color/login_register_btn"
                android:padding="15dp"
                android:text="@string/login_btn_find_pwd"
                android:textColor="@color/register_title_bg"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap,RtlHardcoded"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
