<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_user_background"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_user_head">

        <TextView
            android:id="@+id/user_head_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:drawablePadding="20dp"
            android:drawableTop="@drawable/ic_default_user_head"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="20dp"
            android:text="@string/user_name"
            android:textSize="14sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_user_middle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_collection_goods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_collection_goods"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="5dp"
            android:text="@string/user_collection_goods"
            android:textColor="@color/color_user_collection"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>

        <TextView
            android:id="@+id/user_collection_store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_collection_store"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="5dp"
            android:text="@string/user_collection_store"
            android:textColor="@color/color_user_collection"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>

        <TextView
            android:id="@+id/user_collection_footprint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/ic_user_footprint"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="5dp"
            android:text="@string/user_collection_footprint"
            android:textColor="@color/color_user_collection"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/user_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/color_user_collection"
                android:drawableLeft="@drawable/ic_user_order"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_normal_dot_left"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:padding="15dp"
                android:text="@string/user_all_order"
                tools:ignore="RtlHardcoded"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_user_collection"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_order_wait_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_order_wait_pay"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_order_wait_pay"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_order_wait_drive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_order_wait_drive"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_order_wait_drive"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_order_wait_receipt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_order_wait_receipt"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_order_wait_receipt"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_order_wait_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_order_wait_comment"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_order_wait_comment"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_order_wait_refund"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_order_wait_refund"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_order_wait_refund"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/user_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/color_user_collection"
                android:drawableLeft="@drawable/ic_user_property"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_normal_dot_left"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:padding="15dp"
                android:text="@string/user_property"
                tools:ignore="RtlHardcoded"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_user_collection"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_property_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_property_money"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_property_money"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_property_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_property_card"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_property_card"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_property_vouchers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_property_vouchers"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_property_vouchers"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_property_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_property_red"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_property_red"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>

                <TextView
                    android:id="@+id/user_property_integral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_user_property_integral"
                    android:gravity="center_horizontal"
                    android:onClick="onClick"
                    android:padding="5dp"
                    android:text="@string/user_property_integral"
                    android:textColor="@color/color_user_order"
                    android:textSize="10sp"
                    tools:ignore="SmallSp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/color_user_collection"
                android:drawableLeft="@drawable/ic_user_address"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_normal_dot_left"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:padding="15dp"
                android:text="@string/user_address"
                tools:ignore="RtlHardcoded"/>

            <TextView
                android:id="@+id/user_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_user_collection"
                android:drawableLeft="@drawable/ic_user_setting"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_normal_dot_left"
                android:gravity="center_vertical"
                android:onClick="onClick"
                android:padding="15dp"
                android:text="@string/user_setting"
                tools:ignore="RtlHardcoded"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
