<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/register_title_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/person_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:src="@drawable/ic_action_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/personal_center"
            android:textColor="@color/color_user_collection"
            android:textSize="20sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/person_head_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_head_image"
        android:padding="14dp"
        android:background="@color/color_user_collection"
        />
    <Button
        android:id="@+id/person_exit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_user_collection"
        android:textColor="@color/register_title_bg"
        android:layout_marginTop="15dp"
        android:text="@string/exit_login"/>

</LinearLayout>
